--- a/package.json
+++ b/package.json
@@ -30,20 +30,24 @@
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-core": "^6.0.20",
-    "babel-eslint": "^4.1.3",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.0.15",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.6.2",
+    "eslint": "^2.10.2",
+    "eslint-plugin-react": "^5.1.1",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "object-assign": "^4.1.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
+    "react-router-component": "^0.32.2",
+    "redux": "^3.5.2"
   },
   "main": "server.js"
 }
